fix overflow

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
 nav {
